# cabinet

./: pyproject.toml
cabinet/: __init__.py  cabinet.py  gui.py
cabinet/gui/: __init__.py  main_ui.py
cabinet/templates/: basic_video.yaml
tests/: test_cabinet.py
