[tool.poetry]
name = "cabinet"
version = "0.1.0"
description = "Cabinet is a program for content creators to archive projects in a modular fashion. "
authors = ["Bo Kamphues <b.kamphues@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
