[tool.poetry]
name = "cabinet"
version = "0.1.0"
description = "Cabinet is a program for content creators to archive projects in a modular fashion. "
authors = ["Bo Kamphues <b.kamphues@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
PySide2 = "^5.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"

[tool.poetry.scripts]
cabinet = 'cabinet.cabinet:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
